--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "A backend server for graphql tutorial",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "nodemon index.js"
   },
   "author": "shubhansu-kr",
   "license": "ISC",
@@ -12,5 +13,8 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "graphql": "^16.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
